# rust-osero-for-study

./: Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs
src/game/: board.rs  mod.rs  player.rs
